<resources>
    <string name="app_name">BC Reco</string>
    <string name="barcode">Barcode</string>
    <string name="action_settings">Settings</string>

    <string name="add_ruble_sign">%s ₽</string>

    <!--  Preference -->
    <string name="pref_ip_label">IP address</string>
    <string name="pref_ip_key" translatable="false">ip_address</string>
    <string name="pref_ip_default" translatable="false">192.168.14.2</string>
    <string name="toast_message_incorrect_ip_address">IP address incorrectly specified</string>

    <string name="pref_port_label">Port</string>
    <string name="pref_port_key" translatable="false">port</string>
    <string name="pref_port_default" translatable="false">1433</string>
    <string name="toast_message_incorrect_port">Port incorrect</string>

    <string name="pref_login_label">Login</string>
    <string name="pref_login_key" translatable="false">login</string>
    <string name="pref_login_default" translatable="false">tv</string>

    <string name="pref_password_label">Password</string>
    <string name="pref_password_key" translatable="false">password</string>
    <string name="pref_password_default" translatable="false">12345678</string>

    <string name="pref_store_id_label">Store ID</string>
    <string name="pref_store_id_key" translatable="false">store_id</string>
    <string name="pref_store_id_default" translatable="false">119</string>
    <string name="toast_message_incorrect_store_id">Store ID incorrectly specified</string>
    <!-- end of Preference-->

    <!-- Permissions -->
    <string name="camera_permission_rationale">Camera permission need for reading barcodes.</string>
    <string name="camera_permission_is_not_granted">Camera permission isn\'t granted</string>
    <string name="camera_permission_settings_explanation">Open Permissions and grant the Camera permission</string>

</resources>
